<resources>
    <string name="app_name">Mushrooms</string>
    <string name="main_picture_desc">Белый гриб</string>
    <string name="main_title">Mushrooms Identifyer</string>
    <string name="tool_bar_name">Mushrooms</string>
    <string name="but_history_text">History</string>
    <string name="but_start_text">Start</string>
    <string name="action_back">Back</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="quest_prompt">Введите в поля ниже данные найденного гриба:</string>
    <string name="lbl_top_color">Цвет шляпы:</string>
    <string name="lbl_grow_place">Место произрастания:</string>
    <string name="lbl_found">Дата находки:</string>
    <string name="lbl_round_kind">Цвет оборота шляпы:</string>
    <string name="lbl_round_color">Цвет оборота шляпки:</string>
    <string name="lbl_slice">Мякоть на срезе:</string>
    <string name="lbl_match">Подходит: 12 грибов</string>
    <string name="lbl_screen1">1/2</string>
    <string name="lbl_screen2">2/2</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_hat_width">Ширина шляпки, см:</string>
    <string name="lbl_hat_spec">Особенности:</string>
    <string name="lbl_leg_color">Цвет ножки:</string>
    <string name="lbl_leg_height">Высота ножки, см:</string>
    <string name="lbl_leg_diameter">Диаметр ножки, см:</string>
    <string name="lbl_leg_ring">Кольцо на ножке:</string>
    <string name="lbl_ready">Identify</string>
    <string name="lbl_results">Results:</string>
    <string name="but_clear">Clear</string>
    <string name="text_white_mushroom">Белый гриб</string>
    <string name="text_podberez">Подберезовик обыкновенный</string>
    <string name="text_maslenok">Масленок обыкновенный</string>
    <string name="text_mokruha">Мокруха еловая</string>
    <string name="text_polski_grib">Польский гриб</string>
    <string name="but_show_more">Show more</string>
    <string name="lbl_description">Description:</string>
    <string name="history_text1">17.08.2019 14:50\nБелый гриб\nКоричневый, смешанный лес, август, губчатый, белый</string>
    <string name="history_text2">10.08.2019 11:00\nМухомор красный\nКрасный, смешанный лес, август, пластинчатый, белый</string>
    <string name="show_result">Show result</string>
    <string name="correct">Correct</string>
    <string name="description"><p>Можно спутать с желчным грибом, горчаком с розовеющей мякотью.</p>
    <p>Шляпка белого гриба имеет коричнево-бурый цвет, существуют подвиды белых
    грибов с окраской шляпки от светло коричневого до темно каштанового цвета. Обычно она вырастает
    до 7-30 сантиметров в диаметре. Хотя в некоторых, особенно благоприятных местах, можно встретить
    белый гриб со шляпкой диаметром в 50 см. Оборот шляпки губчатый, белого цвета.</p>
    <p>Мякоть у созревшего гриба обычно сочная, плотная, мясистая, белого цвета.
    У старых грибов она может немного пожелтеть. На срезе и после обработки не темнеет.</p>
    <p>Растут везде, за исключением Антарктиды и Австралии, в хвойных, лиственных и смешанных лесах.</p></string> />
    <string name="details1">Шляпка зрелого гриба диаметром 7—30 см (иногда до 50 см), выпуклая, у старых грибов плоско-выпуклая, редко распростёртая. Поверхность гладкая или морщинистая, в сухую погоду может растрескиваться, голая, может быть тонковойлочная (особенно у края), редко волокнисто-чешуйчатая. Во влажную погоду поверхность слегка слизистая, в сухую матовая или блестящая. Цвет кожицы — от красно-коричневого до почти белого, с возрастом темнеет, может также быть лимонно-жёлтых, оранжевых, пурпурных тонов, часто окраска неравномерная, со светлыми краями, иногда с узким чисто-белым или желтоватым ободком. Кожица приросшая, не отделяется от мякоти.</string>
    <string name="details2">Болет (лат. Boletus) — род грибов семейства Болетовые (лат. Boletaceae), имеющих трубчатый спороносный слой.

История названия Болет уходит в 18-й век. По предложенной Карлом Линнеем классификации, грибы сначала поделили на Болеты (трубчатые) (лат. Boletus) и Агарики (пластинчатые) (лат. Agaricus).

До сих пор эти названия сохранились: Болет (лат. Boletus) и Шампиньон (лат. Agaricus)

Самым ценным из наиболее распространённых видов рода Болет — считается белый гриб[1], а Боровиком называют именно Белый гриб сосновый, растущий в сосновых борах, а также и другие крупные болеты, включая белый гриб. Некоторыми микологами к роду Болет часто причисляются представители рода Моховик (лат. Xerocomus).</string>
    <string name="details3">Шляпконожечные пластинчатые грибы. Шляпка покрытая слоем слизи, в сухую погоду подсыхающим, окрашенная в пурпурные, розовые, серовато-винно-коричневые тона, иногда очень слабо, при прикосновении часто чернеющая. Пластинки нисходящие на ножку, изначально белые, бледные или жёлтые, к созреванию спор темнеющие до грязно-серых.

Мякоть белая, нередко с желтоватым или розовато-буроватым оттенком.

Ножка со слизистым кольцом или почти без него, над ним влажноватая, под ним клейко-слизистая, вверху беловатая или розовая, ниже кольца — жёлтая, пурпурная или также беловатая.

Споровый порошок зеленовато- или буровато-чёрный. Споры веретеновидные, неорнаментированные. Цистиды имеются, неокрашенные.</string>
    <string name="details4">Шляпка размером от 8 до 20 см. Форма её в начале полусферическая, затем раскрывается до плоской и вогнутой. Кожица ярко-красная, различной густоты цвета, блестящая, усеяна белыми бородавчатыми хлопьями.

Мякоть белая, под кожицей светло-оранжевая или светло-жёлтая, с лёгким запахом.

Пластинки шириной 0,8—1,2 см, белые или кремовые, частые, свободные, имеются многочисленные промежуточные пластиночки.

Ножка цилиндрическая, высотой 8—20 и диаметром 1—2,5 см, белая или желтоватая, с клубневидно-утолщённым основанием, у зрелых грибов полая.

Остатки покрывал. Хлопья на кожице шляпки ватные, белые, могут отпадать. Плёнчатое кольцо в верхней части ножки, свисающее, устойчивое, края часто неровные, верхняя поверхность иногда слегка рубчатая. Влагалище приросшее, многослойное, очень хрупкое, имеет вид нескольких колец из беловатых бородавок возле основания ножки.

Споровый порошок беловатый, споры 9×6,5 мкм, эллипсоидальные, гладкие.</string>
    <string name="details5">Шляпка диаметром 4—10 (до 13) см, мясистая, у молодых грибов — полушаровидная, с подвёрнутым к ножке краем, далее выпукло—коническая, позднее распростёртая или слегка вдавленная в центре, с малозаметным бугорком. Кожица шляпки гладкая, сильно слизистая, после высыхания слизи становится блестящей; серая, серовато-синяя или серовато-коричневая, с фиолетовым оттенком по краю и светлой серединой, в зрелости — с чёрными пятнами или крапинками по всей поверхности шляпки. Кожица легко и полностью снимается со шляпки. У молодых грибов край шляпки соединён с ножкой тонким слизистым частным покрывалом, выглядящим как бесцветная плёнка, состоящая из нитевидных волоконец; позднее по краю шляпки сохраняются его остатки, а на ножке — постепенно исчезающее невыраженное слизистое кольцо.

Мякоть мясистая, хрупкая; белая, иногда розоватая, у старых грибов сероватая, в основании ножки — желтоватая. Вкус мякоти слегка сладковатый или кисловатый (но не едкий), запах невыразительный, грибной.</string>
    <string-array name="hat_color_array">
        <item>Бурый, коричневый</item>
        <item>Красный</item>
        <item>Желтый</item>
        <item>Серый</item>
    </string-array>
    <string-array name="grow_place_array">
        <item>Лиственный лес</item>
        <item>Хвойный лес</item>
        <item>Смешанный лес</item>
    </string-array>
    <string-array name="found_array">
        <item>Сегодня</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
    </string-array>
    <string-array name="round_kind_array">
        <item>Губчатый</item>
        <item>Пластинчатый</item>
        <item>Гладкий</item>
        <item>Складчатый</item>
        <item>Шиповатый</item>
    </string-array>
    <string-array name="round_color_array">
        <item>Белый</item>
        <item>Желтый</item>
        <item>Серый</item>
    </string-array>
    <string-array name="slice_array">
        <item>Белая, без выделений</item>
        <item>Желтая</item>
        <item>Серая</item>
    </string-array>
    <string-array name="spec_array">
        <item>Нет</item>
        <item>Крапинки</item>
        <item>Светлее к краям</item>
    </string-array>
    <string-array name="leg_color_array">
        <item>Белый</item>
        <item>Желтый</item>
        <item>Серый</item>
    </string-array>
    <string-array name="leg_ring_array">
        <item>Отсутствует</item>
        <item>Ровное</item>
        <item>Волнистое</item>
    </string-array>
</resources>
