<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsActivity">

    <include layout="@layout/action_bar"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="395dp"
            android:layout_height="659dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingTop="8dp">

        <TextView
                android:text="Болетус"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/title"
                android:textSize="36sp" android:textStyle="bold"/>

        <HorizontalScrollView
                android:layout_width="257dp"
                android:layout_height="160dp">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="240dp"
                        android:layout_height="160dp"
                        app:srcCompat="@drawable/boletus_badius_02"
                        android:id="@+id/image_mushroom1"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/text_white_mushroom" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
                android:text="@string/lbl_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/subtitle"
                android:textSize="30sp" android:textStyle="bold"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="368dp"
                android:id="@+id/descriptionText"
                android:text="@string/details2" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>