<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:padding="0dp" android:layout_margin="0dp">

    <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/MushroomsGreen"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:title=" "
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/main_page_picture"
            android:id="@+id/imageView"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" tools:scaleType="centerCrop" android:layout_margin="0dp"
            android:padding="0dp" android:paddingBottom="0dp" android:paddingEnd="0dp" android:paddingLeft="0dp"
            android:paddingRight="0dp" android:paddingStart="0dp" android:paddingTop="0dp" tools:layout_margin="0dp"
            android:contentDescription="@string/main_picture_desc"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="400dp" android:gravity="center">

        <TextView
                android:text="@string/main_title"
                android:layout_width="364dp"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="343dp"
                tools:layout_editor_absoluteX="0dp"
                android:id="@+id/textView"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold|italic"
                android:layout_marginBottom="16dp"
                android:background="@color/MushroomsGreen"
                android:drawableTint="#F6F6F6" />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/but_history_text"
                    android:layout_width="137dp"
                    android:layout_height="38dp" tools:layout_editor_absoluteY="456dp"
                    tools:layout_editor_absoluteX="62dp" android:id="@+id/but_history"
                    android:background="@drawable/holo_green_rounded_corners" android:layout_marginRight="8dp"
                    android:elevation="0dp" android:clickable="true" android:textStyle="bold"/>
            <Button
                    android:text="@string/but_start_text"
                    android:layout_width="137dp"
                    android:layout_height="38dp" tools:layout_editor_absoluteY="457dp"
                    tools:layout_editor_absoluteX="207dp" android:id="@+id/but_start"
                    style="@style/Widget.AppCompat.Button" tools:style="@style/Widget.AppCompat.Button.Colored"
                    android:background="@drawable/holo_orange_rounded_corners" android:layout_marginLeft="8dp"
                    android:clickable="true" android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>