<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".History">
    <include layout="@layout/action_bar"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">




    <LinearLayout
            android:orientation="vertical"
            android:layout_width="319dp"
            android:layout_height="526dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

        <Button
                android:text="@string/but_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/but_clear"
                android:background="@drawable/light_green_rounded_corners"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAllCaps="false"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_gravity="right" />

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/history_items">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/history_item1"
                        style="@style/history_style">

                    <TextView
                            android:text="@string/history_text1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/history_text1"
                            android:textSize="24sp" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp">

                        <Button
                                android:text="@string/show_result"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/but_show_result"
                                android:background="@drawable/green_rounded_corners"
                                android:textColor="@android:color/white"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:textAllCaps="false"
                                android:paddingStart="4dp"
                                android:paddingEnd="4dp"
                                android:layout_gravity="right"
                                android:layout_marginStart="8dp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/history_item2"
                        style="@style/history_style">

                    <TextView
                            android:text="@string/history_text2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/history_text2"
                            android:textSize="24sp" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp">

                        <Button
                                android:text="@string/show_result"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/but_show_result2"
                                android:background="@drawable/green_rounded_corners"
                                android:textColor="@android:color/white"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:textAllCaps="false"
                                android:paddingStart="4dp"
                                android:paddingEnd="4dp"
                                android:layout_gravity="right"
                                android:layout_marginStart="8dp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <View
                android:layout_width="fill_parent"
                android:layout_height="60dp"/>
    </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>